--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
-  
+  <link rel="Stylesheet" href="style.css">
+  <script src="C:\Users\GenerationChile35\Documents\GitHub\tifc2-ad-02-lab-assessment-interacting-with-html-css-js-nicki30\script.js"></script>
 </head>
 
+
 <body>
+  <h1 id="titulo_1">Bienvenidxs a Mental Oasis</h1>
+  <button onclick="cambiarTitulo()">Cambiar Título</button>
+  <script src="script.js"></script>
+  <img src=Pictures\b-beans.jpg width="200px">
+  <h2 id="rojo">Soy un perrito tierno</h2>
+  <h3 class="azul">Hola Mundo</h3>
+  <h4 id="titulo4" class="azul">Hola Mundo</h4>
+  <button onclick="cambiarColor()">Cambiar Color</button>
+  <h5> "Hola Mundo"</h5>
+  <h5 id="cambiando" cambiarColorDeFuente()>"Hola Mundo"</h5>
+  <button onclick="cambiarColor()">Cambiar Color</button>
+  <h6 id="cambiando" onclick="cambi"
+
 
   
   
@@ -17,7 +32,7 @@
   page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
   teal, blue, blurple, magenta, pink!
   -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+  
 </body>
 
 </html>
